<resources>
    <string name="app_name">Velix</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="velix_id">Your Velix.ID</string>
    <string name="view_profile">View Profile</string>
    <string name="backup">BackUp Profile</string>
    <string name="restore">Restore Profile</string>
    <string name="logout">Logout</string>
    <string name="information_require">&#160;has requested your \nfollowing information</string>
    <string name="legal_name">Legal Name</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="deny">deny</string>
    <string name="approve">approve</string>
    <string name="select_file">Select file</string>
    <string name="file_created">Backup has been done successfully!</string>
    <string name="file_create_error">Error in creating file</string>
    <string name="read_failed">Error while retrieving file</string>
    <string name="content_loaded">File contents successfully read</string>
    <string name="file_not_selected">No file selected, cannot continue</string>
    <string name="custom_property_updated">Custom property updated successfully</string>
    <string name="update_failed">Unable to update.</string>
    <string name="password">Password</string>
    <string name="create_new">Create New Velix.ID</string>
    <string name="restore_velix">Restore Velix.ID</string>
    <string name="enter_name">Enter your Full name</string>
    <string name="create_tag">lets create your</string>
    <string name="velixid">Velix.ID</string>
    <string name="next">Next</string>
    <string name="generate">Generate Velix.ID</string>
    <string name="enter_email">Enter your Email</string>
    <string name="username_error">Enter user name</string>
    <string name="useremail_error">Enter email id</string>
    <string name="validemail_error">Enter valid email id</string>
    <string name="update">Update</string>
    <string name="updated_successfully">Profile has been updated successfully.</string>
    <string name="userphone_error">Enter your phone number</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="notify">Notifiy</string>
    <string name="topic">VID_</string>

    <!--Services-->
    <string name="generates">generate</string>
    <string name="identifier">identidier</string>

</resources>
