<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="velix.id.mobile.fragments.AuthRequestFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:padding="@dimen/dimen_20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_gravity="center"
            android:layout_width="@dimen/dimen_160"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/fab_margin"
            android:fontFamily="sans-serif-medium"
            android:text="coinsecure"
            android:background="#1FAAB1"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/fab_margin"
            android:text="Coinsecure.in"/>
        <TextView
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/information_require"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_check_green_24dp"
            android:drawablePadding="@dimen/dimen_10"
            android:textColor="@color/black"
            android:text="@string/legal_name"/>
        <TextView
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_check_green_24dp"
            android:drawablePadding="@dimen/dimen_10"
            android:textColor="@color/black"
            android:text="@string/email"/>
        <TextView
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_check_green_24dp"
            android:drawablePadding="@dimen/dimen_10"
            android:textColor="@color/black"
            android:text="@string/phone"/>
        <TextView
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_check_green_24dp"
            android:drawablePadding="@dimen/dimen_10"
            android:textColor="@color/black"
            android:text="@string/permanent_address"/>

        <FrameLayout
            android:layout_marginTop="@dimen/dimen_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_deny"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/dimen_10"
                android:layout_width="@dimen/dimen_120"
                android:layout_height="@dimen/dimen_40"
                android:textColor="@color/white"
                android:background="@color/red"
                android:text="@string/deny"/>
            <Button
                android:id="@+id/btn_approve"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/dimen_10"
                android:layout_width="@dimen/dimen_120"
                android:layout_height="@dimen/dimen_40"
                android:textColor="@color/white"
                android:text="@string/approve"
                android:background="@color/green"/>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>
