<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <LinearLayout
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/logo"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textSize="@dimen/dimen_18"
            android:text="@string/create_tag"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/dimen_18"
            android:text="@string/velixid"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_marginTop="@dimen/dimen_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/enter_name"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:textColor="@color/white"
            android:singleLine="true"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_useremail"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/enter_email"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="@dimen/dimen_10"
            android:singleLine="true"/>

        <Button
            android:layout_marginTop="@dimen/dimen_30"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginBottom="@dimen/dimen_5"
            android:background="@drawable/button_shape"
            android:layout_width="@dimen/dimen_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/generate"
            android:textSize="@dimen/dimen_18"
            android:textAllCaps="false"
            android:id="@+id/btn_generate"/>

    </LinearLayout>
</LinearLayout>