<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="velix.id.mobile.fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <Button
           android:id="@+id/btn_backup"
           android:layout_width="@dimen/dimen_200"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:textAllCaps="false"
           android:layout_marginTop="@dimen/dimen_50"
           android:textSize="@dimen/fab_margin"
           android:text="@string/backup"/>
       <Button
           android:id="@+id/btn_restore"
           android:layout_width="@dimen/dimen_200"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:textAllCaps="false"
           android:layout_marginTop="@dimen/dimen_10"
           android:textSize="@dimen/fab_margin"
           android:text="@string/restore"/>
       <Button
           android:id="@+id/btn_logout"
           android:layout_width="@dimen/dimen_200"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:textAllCaps="false"
           android:layout_marginTop="@dimen/dimen_50"
           android:textSize="@dimen/fab_margin"
           android:text="@string/logout"/>
   </LinearLayout>

</FrameLayout>
