<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="velix.id.mobile.fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:padding="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/name" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10"
            android:singleLine="true"/>
        <TextView
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/phone" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10"
            android:inputType="number"
            android:singleLine="true"/>
        <TextView
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/email" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="@dimen/dimen_160"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/update"/>
    </LinearLayout>

</FrameLayout>
